<resources>
    <string name="app_name">YaraTube</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="home_screen">صفحه اصلی</string>
    <string name="categorys">دسته بندی ها</string>

    <string-array name="more_array">
        <item>پروفایل</item>
        <item>درباره ما</item>
        <item>تماس با ما</item>
    </string-array>

    <string name="user_name">نام کاربر</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name">نام نمایشی</string>
    <string name="gender">جنسیت</string>
    <string name="birthday">تاریخ تولد</string>
    <string name="save">ثبت تغییرات</string>
    <string name="cancel">انصراف</string>
    <string name="back">back</string>
    <string name="camera">دوربین</string>
    <string name="gallery">گالری</string>
    <string name="login">ورود</string>
    <string name="login_by_phone_number">از طریق شماره موبایل</string>
    <string name="login_by_google">از طریق حساب google</string>
    <string name="details">توضیحات</string>
    <string name="comments">نظرات کاربران</string>
    <string name="comment">نظر</string>
    <string name="send">ثبت</string>
    <string name="send_comment">نظر دهید</string>

    <string-array name="array_sex">
        <item>مرد</item>
        <item>زن</item>
    </string-array>
    <string name="title_activity_main">MainActivity</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="dialog_phone_number_title">ورود از طریق شماره موبایل</string>
    <string name="enter_your_phone_number">شماره موبایل خود را وارد کنید</string>
    <string name="fail_progress">عملیات با خطا مواجه شد!</string>
    <string name="no_internet">ارتباط اینترنت شما قطع است</string>
    <string name="enter_verification_code">کد فعالسازی را وارد کنید</string>
    <string name="verification_code">کد فعالسازی</string>
    <string name="not_get_code">کد را دریافت نکردید؟</string>
    <string name="re_enter">تصحیح شماره</string>
    <string name="wrong_number">این شماره صحیح نیست!</string>
    <string name="try_again">تلاش دوباره</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="you_must_login_first">لطفاً ابتدا در برنامه ثبت نام کنید</string>
    <string name="your_score_not_acceptable">امتیاز شما قابل قبول نیست</string>
    <string name="sign_out">خروج از اکانت</string>
    <string name="login_success">ورود شما با موفقیت انجام شد</string>
    <string name="more">بیشتر</string>
    <string name="name_family">نام و نام خانوادگی</string>
    <string name="profile">پروفایل</string>
    <string name="about_us">درباره ما</string>
    <string name="contact_with_us">تماس با ما</string>
    <string name="send_successful">عملیات ذخیره سازی با موفقیت انجام شد</string>
    <string name="developer">وحید طلایی</string>
    <string name="about_us_text">دوره کارآموزی تابستان 97</string>
</resources>
