<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/white"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="@dimen/button_margin"
        android:layout_marginLeft="@dimen/button_margin"
        android:layout_marginTop="@dimen/button_margin"
        android:text="@string/enter_verification_code"
        android:textSize="@dimen/title_text_size"
        android:textStyle="bold"/>

    <EditText
        android:id="@+id/verification_code"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/edittext_background"
        android:padding="@dimen/default_padding"
        android:layout_marginRight="@dimen/button_margin"
        android:layout_marginLeft="@dimen/button_margin"
        android:layout_marginTop="@dimen/button_margin"
        android:inputType="phone"
        android:hint="@string/verification_code"/>

    <TextView
        android:id="@+id/send_code"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="@dimen/button_margin"
        android:text="@string/not_get_code"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/button_margin"
        android:layout_marginLeft="@dimen/button_margin"
        android:layout_marginRight="@dimen/button_margin"
        android:orientation="horizontal">

        <Button
            android:id="@+id/return_back"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="4dp"
            android:layout_weight="1"
            android:text="@string/re_enter"
            android:maxLines="1"
            android:textColor="@color/button_background_1"
            android:textSize="@dimen/details_text_size"
            android:background="@drawable/button_sample1"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="@dimen/button_padding_top">
        </Button>

        <Button
            android:id="@+id/enter"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_weight="1"
            android:text="@string/send"
            android:maxLines="1"
            android:background="@drawable/button_sample2"
            android:textColor="@android:color/white"
            android:textSize="@dimen/details_text_size"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="@dimen/button_padding_top">
        </Button>

    </LinearLayout>

</LinearLayout>