<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/white"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/button_margin"
            android:layout_marginRight="@dimen/button_margin"
            android:layout_marginTop="@dimen/button_margin"
            android:text="@string/enter_verification_code"
            android:textSize="@dimen/title_text_size"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/verification_code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/button_margin"
            android:layout_marginRight="@dimen/button_margin"
            android:layout_marginTop="@dimen/button_margin"
            android:background="@drawable/edittext_background"
            android:hint="@string/verification_code"
            android:inputType="phone"
            android:padding="@dimen/default_padding" />

        <TextView
            android:id="@+id/send_code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/button_margin"
            android:text="@string/not_get_code" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/button_margin"
            android:layout_marginLeft="@dimen/button_margin"
            android:layout_marginRight="@dimen/button_margin"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/return_back"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="4dp"
                android:layout_weight="1"
                android:background="@drawable/button_sample1"
                android:maxLines="1"
                android:orientation="horizontal"
                android:padding="@dimen/button_padding_top">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/re_enter"
                    android:textColor="@color/button_background_1"
                    android:textSize="@dimen/details_text_size" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/enter"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_weight="1"
                android:background="@drawable/button_sample2"
                android:maxLines="1"
                android:orientation="horizontal"
                android:padding="@dimen/button_padding_top">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/send"
                    android:gravity="center"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/details_text_size" />
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true" />

</RelativeLayout>